# topic-modelling-risk-factors

./: .gitattributes  .gitignore  BERTopic_Model.ipynb  BERTopic_Model_Collab.ipynb  Bursty_Classifier.ipynb  LICENSE  Playground final year project.ipynb  README.md  Regression_model.ipynb  bertopic_model.ipynb  bertopic_model_analysis.ipynb  burstiness_model.ipynb  company_tickers.json  data_gathering.ipynb  data_gathering_text_fillings.ipynb  dataset_stats.ipynb  exp_data_cleaning.ipynb  increasing_classifier.ipynb  inserted_risk_fragments.txt  log.txt  main.py  playground.ipynb  pyproject.toml  requirements.in  requirements.txt  timeseries_model.ipynb
clusters/: clean_clusters.csv  clusters.csv
collab/: BERTopic_Model.ipynb  BERTopic_Model_Collab.ipynb  Bursty_Classifier.ipynb  Regression_Model.ipynb  generate_dataset_collab.ipynb
data/: 10-NSC-report.txt  11-NSC-report.txt  12-NSC-report.txt  13-NSC-report.txt  14-NSC-report.txt
latex/: dcu.bst  main.aux  main.fdb_latexmk  main.fls  main.tex  muthesis.cls  sample-bibliography.bib
models/: best_model.joblib  nbeats_forecasting_model.pth.tar  ohe_best_model.joblib
output/: DTM_collab_test_manual_sentence-transformers(1-2).csv
output/DTM/: DTM_collab_test_manual_sentence-transformers(1-2)_full.csv  DTM_local_custom_flair_custom_15_(1, 2)_100.csv  DTM_local_custom_flair_custom_15_(1, 3)_100.csv  DTM_local_manual_use_manual_10_(1, 2)_100_.csv  collab_dataset_07_22__220000_DTM_collab_custom_default_custom_10_(1, 2)_700.csv
static/: README.md
