[project]
name = "topic-modelling-risk-factors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyascii>=0.3.2",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pymongo>=4.12.1",
    "ruff>=0.11.9",
    "sec-downloader>=0.12.1",
    "tqdm>=4.67.1",
]
